로그인 정보에 따른 UI 수정

--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -49,3 +49,14 @@
 	color: white;
 }
 
+.profileDropdown {
+	float: right;
+	color: #497ff3;
+
+	.ant-dropdown-username {
+		margin-left: 10px;
+		margin-right: 10px;
+		font-size: 20px;
+	}
+}
+
