--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -60,3 +60,11 @@
 	}
 }
 
+.search-image-area {
+	width: 100%;
+	height: 40vh;
+	background-image: url(/images/food1.jpg);
+	background-position: center center;
+	opacity: 0.8;
+	text-align: center;
+}
