--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -63,8 +63,19 @@
 .search-image-area {
 	width: 100%;
 	height: 40vh;
-	background-image: url(/images/food1.jpg);
+	background-image: url("/images/food1.jpg");
 	background-position: center center;
 	opacity: 0.8;
 	text-align: center;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.search-input {
+	display: inline-block;
+  vertical-align: middle;
+	display: inline-flex; 
+	justify-content: center;
+	align-items: center;
 }
