--- a/src/pages/detail/RestaurantDetailPage.scss
+++ b/src/pages/detail/RestaurantDetailPage.scss
@@ -1,10 +1,10 @@
-span.restname-span {
+span.restname {
   font-size: 2.7em;
   font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
   font-weight: bold;
 }
 
-span.restrating-span {
+span.restrating {
   color: rgb(255, 183, 50);
   font-size: 22px;
   font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -12,4 +12,30 @@ span.restrating-span {
 
 hr.detail-hr {
   border-top-color: rgba(0, 0, 0, 0.2);
+}
+
+div.review:hover {
+  cursor: pointer;
+}
+
+div.share:hover {
+  cursor: pointer;
+}
+
+div.like:hover {
+  cursor: pointer;
+}
+
+.rest-info {
+  .ant-descriptions-item-label::after {
+    content: '';
+  }
+  .ant-descriptions-item .menu-item {
+    .ant-descriptions-item-container .ant-descriptions-item-content {
+      display: block;
+      text-align: right;
+    }
+    padding-bottom: 0;
+    border-bottom: 1px solid lightgray;
+  }
 }
