--- a/src/pages/detail/review/RestaurantReview.scss
+++ b/src/pages/detail/review/RestaurantReview.scss
@@ -1,3 +1,18 @@
 .review-filter:hover {
   cursor: pointer;
 }
+
+.demo-infinite-container {
+  height: 300px;
+  padding: 8px 24px;
+  overflow: auto;
+  border: 1px solid #e8e8e8;
+  border-radius: 4px;
+}
+
+.demo-loading-container {
+  position: absolute;
+  bottom: 40px;
+  width: 100%;
+  text-align: center;
+}
