게시판 디테일 페이지 작업중

--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -97,3 +97,8 @@ a.main-title:hover {
 .menu-a {
 	color: white !important;
 }
+
+.ant-layout {
+	background-color: white !important;
+	background: white;
+}
