--- a/src/pages/board/detail/BoardDetailPage.scss
+++ b/src/pages/board/detail/BoardDetailPage.scss
@@ -1,7 +1,9 @@
-.demo-infinite-container {
-  // height: 100% !important;
+.BoardDetailPage {
+  .demo-infinite-container {
+    // height: 100% !important;
+  }
+  
+  .ant-card-body {
+    padding-bottom: 8px !important;
 }
-
-.ant-card-body {
-  padding-bottom: 8px !important;
 }
