--- a/src/pages/detail/modal/ReviewAddModal.scss
+++ b/src/pages/detail/modal/ReviewAddModal.scss
@@ -1,9 +1,11 @@
-label.ant-radio-button-wrapper.radio-button {
-  border-left: 0;
-}
-
-.ant-radio-button-wrapper {
-  border: 0 !important;
-  display: inline !important;
-  position: inherit !important;
+.reviewAddModal {
+  label.ant-radio-button-wrapper.radio-button {
+    border-left: 0;
+  }
+  
+  .ant-radio-button-wrapper {
+    border: 0 !important;
+    display: inline !important;
+    position: inherit !important;
+  }
 }
