메인페이지, 검색페이지, 더보기페이지 css 수정, 리뷰 수정하기 라디오버튼 css 수정

--- a/src/pages/more/RestaurantMorePage.scss
+++ b/src/pages/more/RestaurantMorePage.scss
@@ -1,4 +1,7 @@
-div.content-area {
-  margin: 50px 50px 50px 50px;
+@import "/src/App.scss";
+
+.RestaurantMorePage {
+  min-height: $content-min-height;
+  margin: 0 45vh 0;
   text-align: center;
 }
