--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -1,4 +1,13 @@
-.layout {
+// 공통 변수
+
+
+.MainPage {
+	.ant-layout-header {
+		height: 70px;
+	}
+	background-color: white !important;
+	background: white;
+
 	.logo {
 		float: left;
 		width: 120px;
@@ -6,103 +15,55 @@
 		color: white;
 		font-weight: bold;
 		font-size: 20px;
-		
-		img {
-			display:inline-block;
-			vertical-align:middle;
-			margin-top: 10px;
-			width: 40px;
-			height: 40px;
-		}
-		
-		h2 {
+
+		// img {
+		// 	display: inline-block;
+		// 	vertical-align: middle;
+		// 	margin-top: 10px;
+		// 	width: 40px;
+		// 	height: 40px;
+		// }
+
+		.main-title {
 			display: inline-block;
 			position: absolute;
-			color: white;
 			margin-left: 8px;
+			color: white;
+			font-size: 25px;
+			font-weight: bold;
+			margin-bottom: 20px;
+		}
+		.main-title:hover {
+			color: #f4e700 !important;
 		}
 	}
-		
-	.site-layout-content {
-		min-height: 280px;
-		padding: 24px;
-		background: #fff;
-	}
 
-	.ant-row-rtl #components-layout-demo-top .logo {
-		float: right;
-		margin: 16px 0 16px 24px;
-	}
-	
 	.menu {
-		color: white !important;
+		color: white;
 		font-size: 20px;
 		text-align: right;
 	}
-	
-	.logo-name {
-		color: white;
-		font-size: 20px;
-		font-weight: bold;
-		margin-bottom: 20px;
-	}
-	
-	.main-title {
-		color: white;
-	}
-	
+
 	.profileDropdown {
-		float: right;
-		color: #497ff3;
-	
-		.ant-dropdown-username {
+		color: white;
+
+		.dropdown-username {
 			margin-left: 10px;
 			margin-right: 10px;
 			font-size: 20px;
 		}
 	}
-	
-	.search-image-area {
-		width: 100%;
-		height: 40vh;
-		background-image: url("/images/food1.jpg");
-		background-position: center center;
-		opacity: 0.8;
-		text-align: center;
+
+	.search-input {
+		display: inline-block;
+		vertical-align: middle;
 		display: inline-flex;
 		justify-content: center;
 		align-items: center;
 	}
-	
-	.search-input {
-		display: inline-block;
-		vertical-align: middle;
-		display: inline-flex; 
-		justify-content: center;
-		align-items: center;
+
+	.ant-layout-footer {
+		height: 70px;
 	}
-	
-	.content-area {
-		margin: 0 0 0 0;
-		padding: 24;
-		min-height: 280;
-	}
-	a.main-title:hover {
-		color: #F4E700 !important;
-	}
-	
-	.profileDropdown {
-		color: white;
-	}
-	
-	.menu-a {
-		color: white !important;
-	}
-	
-	.ant-layout {
-		background-color: white !important;
-		background: white;
-	}
+
 }
-
-
