--- a/src/pages/content/MainContentPage.scss
+++ b/src/pages/content/MainContentPage.scss
@@ -1,16 +1,44 @@
-.main-hr {
-  border-top-color: rgba(0, 0, 0, 0.06);
-}
+.MainContentPage {
+  .main-content-list {
+    margin: 0 18vh 0;
+  }
 
-.content-div {
-  padding: 0 50px;
-  margin-bottom: 50px;
-}
 
-.div-in-p {
-  float: left;
-}
+  .main-image-area {
+		width: 100%;
+		height: 30vh;
+		background-image: url("/images/food1.jpg");
+		background-position: center center;
+		opacity: 0.8;
+		text-align: center;
+		display: inline-flex;
+		justify-content: center;
+		align-items: center;
 
-.div-in-button {
-  float: right;
+    .search-bar {
+      input {
+        width: 500px
+      }
+    }
+	}
+
+  .main-hr {
+    border-top-color: rgba(0, 0, 0, 0.06);
+  }
+
+  .list-row-header {
+    padding: 10px 50px 0;
+    margin-bottom: 10px;
+  }
+  
+  .list-row {
+    margin-bottom: 15px;
+    padding: 15px 5px 15px;
+    border-radius: 10px;
+    background: #f2f3f2;
+  }
+
+  .div-in-button {
+    float: right;
+  }
 }
