레스토랑 사진 파일 경로 수정

--- a/src/pages/more/RestaurantMorePage.scss
+++ b/src/pages/more/RestaurantMorePage.scss
@@ -4,4 +4,10 @@
   min-height: $content-min-height;
   margin: 0 45vh 0;
   text-align: center;
+
+  .rest-type-text {
+    text-align: left;
+    color: #1890ff;
+    margin-left: 23px;
+  }
 }
