--- a/src/pages/search/SearchPage.scss
+++ b/src/pages/search/SearchPage.scss
@@ -4,4 +4,11 @@
   min-height: $content-min-height;
   margin: 0 45vh 0;
   text-align: center;
+
+  .rest-search-text {
+    text-align: left;
+    color: #1890ff;
+    margin-left: 23px;
+  }
+
 }
