--- a/src/pages/content/MainContentPage.scss
+++ b/src/pages/content/MainContentPage.scss
@@ -3,10 +3,9 @@
     margin: 0 18vh 0;
   }
 
-
   .main-image-area {
 		width: 100%;
-		height: 30vh;
+		height: 40vh;
 		background-image: url("/images/food1.jpg");
 		background-position: center center;
 		opacity: 0.8;
@@ -16,8 +15,13 @@
 		align-items: center;
 
     .search-bar {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 250px;
+      
       input {
-        width: 500px
+        width: 500px;
       }
     }
 	}
